# waffle-cpp

./: .travis.yml  CMakeLists.txt  README.md
cmake/: WaffleConfig.cmake.in
include/waffle/: waffle.h
src/: waffle.cpp
test/: CMakeLists.txt
test/src/: main.cpp
